--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Consumivel.cs" />
      <Compile Include="Assets\enemy1.cs" />
      <Compile Include="Assets\SceneTransitions.cs" />
      <Compile Include="Assets\Scripts\Camera1.cs" />
