Adicionei a tela do boss e mudei o movimento nela
Nessa nova fase, a pessoa vai se movimentar pelo WASD ou pelas setas e atirar pelo botão esquero do mouse.
Coloquei apenas o movimento até então

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\Scripts\Camera1.cs" />
      <Compile Include="Assets\Scripts\GerarMapa.cs" />
      <Compile Include="Assets\Scripts\Jogador1.cs" />
+     <Compile Include="Assets\Scripts\Jogador2.cs" />
      <Compile Include="Assets\Scripts\MenuConfig.cs" />
      <Compile Include="Assets\Scripts\MenuIniciar.cs" />
      <Compile Include="Assets\Scripts\MenuMensagens.cs" />
